--- a/Daniel Bibby Q14518350 AGP AE2 Project.vcxproj.filters
+++ b/Daniel Bibby Q14518350 AGP AE2 Project.vcxproj.filters
@@ -66,11 +66,15 @@
     <ClCompile Include="Timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ParticleGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="shaders.hlsl" />
     <FxCompile Include="text2D_shaders.hlsl" />
     <FxCompile Include="skyShaders.hlsl" />
+    <FxCompile Include="particleShaders.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
@@ -119,6 +123,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ParticleGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
