--- a/Daniel Bibby Q14518350 AGP AE2 Project.vcxproj.filters
+++ b/Daniel Bibby Q14518350 AGP AE2 Project.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="ParticleGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MoreMaths.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="shaders.hlsl" />
@@ -126,6 +129,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ParticleGenerator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MoreMaths.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
